--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.15.4",
+    "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "@stomp/stompjs": "^7.0.0",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,16 +14,19 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.3.2",
     "classnames": "^2.5.1",
+    "client": "^0.0.1",
     "firebase": "^10.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "styled-reset": "^4.5.2",
-    "react-router-dom": "^6.21.2",
+    "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
-    "reactstrap": "^9.2.1",
-    "sass": "^1.69.7",
+    "react-stomp": "^5.1.0",
+    "reactstrap": "^9.2.2",
+    "sass": "^1.70.0",
+    "sockjs": "^0.3.24",
     "sockjs-client": "^1.6.1",
+    "styled-reset": "^4.5.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
